--- a/index.html
+++ b/index.html
@@ -348,9 +348,10 @@
     <footer>
         <div class="row">
             <div class="col-md-12 text-center">
-            <button id="button" class="btn btn-primary btn-lg " type="button"  onclick="return submit_onclick()">
-                <span class="glyphicon glyphicon-star"> </span> 提交成绩
-            </button>
+                <span class="glyphicon glyphicon-star"> </span>
+                <input id="button" class="btn btn-primary btn-lg"  value="提交成绩" type="submit"  onclick="return submit_onclick()">
+                <span class="glyphicon glyphicon-star"> </span> 
+                </input>
             </div>
         </div>
     </footer>
